# 4data-project

./: .dockerignore  .env  .gitignore  README.md  docker-compose-dev-prod.yaml  docker-compose-dev.yaml  docker-compose-prod.yaml
dagster-informatics-companies/: .gitignore  Dockerfile  README.md  dagster.yaml  pyproject.toml  workspace.yaml
dagster-informatics-companies/.dg/: telemetry.yaml
dagster-informatics-companies/src/dagster_informatics_companies/: definitions.py
dagster-informatics-companies/src/dagster_informatics_companies/data/raw/: entreprise_informatique.csv
dagster-informatics-companies/src/dagster_informatics_companies/data/staging/: naf_code.csv
dagster-informatics-companies/src/dagster_informatics_companies/defs/: projects.py
dagster-informatics-companies/src/dagster_informatics_companies/defs/assets/: code_naf.py  companies.py  constants.py  dbt.py  region_deps.py  reporting_companies.py  table_scd2.py
dagster-informatics-companies/src/dagster_informatics_companies/defs/jobs/: __init__.py
dagster-informatics-companies/src/dagster_informatics_companies/defs/partitions/: __init__.py
dagster-informatics-companies/src/dagster_informatics_companies/defs/resources/: __init__.py
dagster-informatics-companies/src/dagster_informatics_companies/defs/schedules/: __init__.py
dagster-informatics-companies/tests/integration/: test_code_naf_integration.py
dagster-informatics-companies/tests/units/: test_code_naf.py  test_companies.py  test_region_deps.py  test_scd2.py
dbt_informatics_companies/: .user.yml  dbt_project.yml  profiles.yml
(+12 files in other folders)
